--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -94,6 +94,7 @@ html {
                                 text-decoration: none;
                                 display: flex;
                                 align-items: center;
+                                font-weight: 600;
                                 &:hover {
                                     color: #5f79af;
                                 }
